plugins {
    id 'java'
    id 'antlr'
    id 'application'
}

group = 'cn.edu.xjtu.sysy'
version = '0.0.1'

repositories {
    maven { url = "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    antlr 'org.antlr:antlr4:4.12.0'
    runtimeOnly 'org.antlr:antlr4-runtime:4.12.0'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.56'

    testImplementation platform('org.junit:junit-bom:5.12.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

compileJava {
    sourceCompatibility = targetCompatibility = 23
}

compileTestJava {
    sourceCompatibility = targetCompatibility = 23
}

generateGrammarSource {
    maxHeapSize = '512m'
    arguments = ['-long-messages', '-no-listener', '-visitor']
    outputDirectory = new File("build/generated-src/antlr/main/cn/edu/xjtu/sysy/parse")
}

compileJava.dependsOn(generateGrammarSource)
compileTestJava.dependsOn(generateTestGrammarSource)

application {
    mainClass = 'Compiler'
}

jar {
    manifest {
        attributes 'Main-Class': 'Compiler'
    }
}
